# hw_web_11

contacts_api/: main.py  pyproject.toml
contacts_api/src/: schemas.py
contacts_api/src/database/: create_db.py  create_table.py  db.py  models.py
contacts_api/src/repository/: repository.py
contacts_api/src/routes/: routes.py
